[package]
name = "bust"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.11.0"
build_html = "2.7.0"
cargo-watch = "8.5.2"
clap = { version = "4.5.4", features = ["derive"] }
convert_case = "0.10.0"
csv = "1.3"
dotenvy = "0.15.7"
duckdb = { version = "=1.4.3", features = ["r2d2", "json"] }
env_logger = "0.11.3"
flate2 = "1.0.35"
futures = "0.3.28"
itertools = "0.14.0"
jiff = {version="0.2.15", features = ["serde"]}
# json5 = "0.4.1"
lazy_static = "1.4.0"
log = "0.4"
mongodb = "3.3.0"
num-format = "0.4.4"
once_cell = "1.21.3"
pest = "2.6"
pest_derive = "2.6"
plotly = "0.12.1"
quick-xml = { version = "0.37", features = ["serialize"] }
r2d2 = "0.8.10"
# r2d2-duckdb = "0.1.0"
rayon = "1.7.0"
regex = "1.12.2"
reqwest = {version="0.13.1", features = ["cookies", "json", "blocking", "stream"]}
reqwest_cookie_store = "0.9.0"
rust_decimal = {version="1.39.0", features = ["serde-with-float", "serde"]}
rust_decimal_macros = "1.39.0"
scraper = "0.25.0"
serde = {version="1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tabled = "0.20.0"
# time = "0.3.44"
thiserror = "1.0.64"
tokio = {version = "1.47.1", features = ["full"]}
tokio-util = "0.7.17"
zip = "7.0.0"
glob = "0.3.3"
url = "2.5.8"

[dev-dependencies]
criterion = "0.8.1"

[[bin]]
name = "hello_world"
path = "src/bin/irregular/hello_world.rs"

[[bin]]
name = "rebuild_duckdbs"
path = "src/bin/irregular/rebuild_duckdbs.rs"

[[bin]]
name = "send_email"
path = "src/bin/irregular/send_email.rs"

[[bench]]
name = "count_hours_benchmark"
harness = false

[[example]]
name = "calendar_bench"
path = "examples/calendar_bench/main.rs"

[[example]]
name = "duckdb"
path = "examples/duckdb/main.rs"

[[example]]
name = "example_datetime"
path = "examples/duckdb/example_datetime.rs"

[[example]]
name = "example_decimal"
path = "examples/duckdb/example_decimal.rs"

[[example]]
name = "example_enum"
path = "examples/duckdb/example_enum.rs"

[[example]]
name = "example_list"
path = "examples/duckdb/example_list.rs"

[[example]]
name = "example_read_json"
path = "examples/duckdb/example_read_json.rs"

[[example]]
name = "inheritance"
path = "examples/learn/inheritance.rs"

[[example]]
name = "string_speed"
path = "examples/string_speed.rs"
